--- a/src/app/features/testimonials/testimonials.component.scss
+++ b/src/app/features/testimonials/testimonials.component.scss
@@ -1,9 +1,9 @@
 .testimonials {
   background: var(--color-surface-2);
-  padding: 5rem 1.5rem 4rem;
+  padding: 2rem 1.5rem 4rem;
 
   @media (min-width: 768px) {
-    padding: 6rem 2rem 5rem;
+    padding: 3rem 2rem 5rem;
   }
 
   &__container {
